[project]
name = "caustic.grammar"
version = "2.2.0"
dependencies = ["caustic.cst", "caustic.parser"]
requires-python = ">=3.12"
authors = [{name="Shae.c32"}]
maintainers = []
description = "Caustic's default grammar"
readme = "README.md"
keywords = ['caustic', 'language', 'grammar']
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Other",
    "Topic :: File Formats",
    "Topic :: Software Development",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://codeberg.org/Caustic/CausticGrammar"
Issues = "https://codeberg.org/Caustic/CausticGrammar/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"caustic.grammar" = ["**/*.pg", "**/*.pgt"]
